--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     // 2. CONFIGURE THE LINK (Capital W)
     // Format: Writeoffgenie://writeoffgenie.com/signuppage?ref=CODE
-    const scheme = "Writeoffgenie";
+    const scheme = "writeoffgenie";
     const host = "writeoffgenie.com/signuppage";
     
     const deepLink = `${scheme}://${host}?ref=${encodeURIComponent(ref)}`;
